# rules_closure

./: .gitignore  BUILD  MODULE.bazel  README.md
.bcr/: metadata.template.json  presubmit.yml  source.template.json
closure/: defs.bzl  extension.bzl  repositories.bzl
closure/compiler/: closure_js_library.bzl
closure/private/: defs.bzl
closure/protobuf/: BUILD.bazel
closure/protobuf/test/: BUILD  BUILD.bazel  baz_test.js  foo_test.js
closure/protobuf/test/legacy/: BUILD  BUILD.bazel  example_test.js
closure/stylesheets/: closure_css_binary.bzl
closure/stylesheets/test/: BUILD
closure/testing/: closure_js_test.bzl
java/com/google/javascript/jscomp/: BUILD
java/io/bazel/rules/closure/: BUILD
java/io/bazel/rules/closure/http/: BUILD  BUILD.bazel
java/io/bazel/rules/closure/http/filter/: BUILD
java/io/bazel/rules/closure/testing/: BUILD
java/io/bazel/rules/closure/webfiles/: BUILD  BUILD.bazel
java/io/bazel/rules/closure/webfiles/compiler/: BUILD  BUILD.bazel
java/io/bazel/rules/closure/webfiles/server/: BUILD  BUILD.bazel
java/io/bazel/rules/closure/worker/: BUILD  BUILD.bazel
java/org/jsoup/nodes/: BUILD.bazel
javatests/com/google/javascript/jscomp/: BUILD
javatests/io/bazel/rules/closure/: BUILD
javatests/io/bazel/rules/closure/http/: BUILD  BUILD.bazel
javatests/io/bazel/rules/closure/http/filter/: BUILD
javatests/io/bazel/rules/closure/webfiles/: BUILD  BUILD.bazel
javatests/io/bazel/rules/closure/webfiles/server/: BUILD
javatests/io/bazel/rules/closure/worker/: BUILD
javatests/io/bazel/rules/closure/worker/testing/: BUILD
javatests/org/jsoup/nodes/: BUILD  BUILD.bazel
