module(
    name = "io_bazel_rules_closure",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)

bazel_dep(
    name = "platforms",
    version = "0.0.5",
    dev_dependency = True,
)

bazel_dep(
    name = "zlib",
    version = "1.3.1",
)

bazel_dep(
    name = "rules_proto",
    version = "7.0.2",
)

##### Cc dependencies #####
bazel_dep(
    name = "rules_cc",
    version = "0.0.17",
)

bazel_dep(
    name = "abseil-cpp",
    version = "20240722.0",
)

##### Java dependencies #####
bazel_dep(
    name = "rules_java",
    version = "8.6.1",
)

bazel_dep(
    name = "rules_jvm_external",
    version = "6.6",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "com.google.guava:guava-testlib:33.2.1-jre",
        "com.google.jimfs:jimfs:1.1",
        "org.hamcrest:hamcrest-core:1.3",
        "org.mockito:mockito-core:5.4.0",
        "org.objenesis:objenesis:3.4",
        "net.bytebuddy:byte-buddy:1.10.5",
        "net.bytebuddy:byte-buddy-agent:1.10.5",
        "junit:junit:4.13.2",
        "com.google.truth:truth:1.4.0",
        "com.google.auto:auto-common:1.2.1",
        "com.google.auto.factory:auto-factory:1.0.1",
        "args4j:args4j:2.33",
        "com.google.auto.value:auto-value:1.10.4",
        "com.google.auto.value:auto-value-annotations:1.10.4",
        "com.google.closure-stylesheets:closure-stylesheets:1.5.0",
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.code.gson:gson:2.10.1",
        "org.jsoup:jsoup:1.16.1",
        "com.google.dagger:dagger:2.43.2",
        "com.google.dagger:dagger-compiler:2.43.2",
        "com.google.dagger:dagger-producers:2.43.2",
        "com.google.errorprone:error_prone_annotations:2.32.0",
        "com.google.errorprone:javac-shaded:9-dev-r4023-3",
        "com.google.guava:guava:33.2.1-jre",
        "com.google.guava:failureaccess:1.0.1",
        "com.google.googlejavaformat:google-java-format:1.18.1",
        "com.squareup:javapoet:1.12.0",
        "net.java.dev.javacc:javacc:7.0.13",
        "javax.annotation:jsr250-api:1.0",
        "javax.inject:javax.inject:1",
        "org.apache.tomcat:tomcat-annotations-api:8.0.5",
        "org.seleniumhq.selenium:selenium-remote-driver:4.27.0",
        "org.seleniumhq.selenium:selenium-api:4.27.0",
        "org.seleniumhq.selenium:selenium-support:4.27.0",
    ],
)

maven.artifact(
    artifact = "closure-compiler",
    group = "com.google.javascript",
    version = "v20240317",
)

maven.override(
    coordinates = "javacc:javacc",
    target = "@maven//:net_java_dev_javacc_javacc",
)

use_repo(maven, "maven")

##### Python dependencies #####
bazel_dep(
    name = "rules_python",
    version = "1.0.0",
)

##### use_repo_rule statements #####
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "fonts_noto_mono_deb",
    sha256 = "71ff715cf50a74a8cc11b02e7c906b69a242d3d677e739e0b2d18cd23b7de375",
    urls = [
        "https://mirror.bazel.build/http.us.debian.org/debian/pool/main/f/fonts-noto/fonts-noto-mono_20161116-1_all.deb",
        "http://http.us.debian.org/debian/pool/main/f/fonts-noto/fonts-noto-mono_20161116-1_all.deb",
    ],
)

http_file(
    name = "libexpat_amd64_deb",
    sha256 = "682d2321297c56dec327770efa986d4bef43a5acb1a5528b3098e05652998fae",
    urls = [
        "https://mirror.bazel.build/http.us.debian.org/debian/pool/main/e/expat/libexpat1_2.1.0-6+deb8u3_amd64.deb",
        "http://http.us.debian.org/debian/pool/main/e/expat/libexpat1_2.1.0-6+deb8u3_amd64.deb",
    ],
)

http_file(
    name = "libpng_amd64_deb",
    sha256 = "a57b6d53169c67a7754719f4b742c96554a18f931ca5b9e0408fb6502bb77e80",
    urls = [
        "https://mirror.bazel.build/http.us.debian.org/debian/pool/main/libp/libpng/libpng12-0_1.2.50-2+deb8u2_amd64.deb",
        "http://http.us.debian.org/debian/pool/main/libp/libpng/libpng12-0_1.2.50-2+deb8u2_amd64.deb",
    ],
)

http_file(
    name = "libfontconfig_amd64_deb",
    sha256 = "0bb54d61c13aa5b5253cb5e08aaca0dfc4c626a05ee30f51d0e3002cda166fec",
    urls = [
        "https://mirror.bazel.build/http.us.debian.org/debian/pool/main/f/fontconfig/libfontconfig1_2.11.0-6.3+deb8u1_amd64.deb",
        "http://http.us.debian.org/debian/pool/main/f/fontconfig/libfontconfig1_2.11.0-6.3+deb8u1_amd64.deb",
    ],
)

http_file(
    name = "libfreetype_amd64_deb",
    sha256 = "80184d932f9b0acc130af081c60a2da114c7b1e7531c18c63174498fae47d862",
    urls = [
        "https://mirror.bazel.build/http.us.debian.org/debian/pool/main/f/freetype/libfreetype6_2.5.2-3+deb8u1_amd64.deb",
        "http://http.us.debian.org/debian/pool/main/f/freetype/libfreetype6_2.5.2-3+deb8u1_amd64.deb",
    ],
)

http_file(
    name = "fonts_noto_hinted_deb",
    sha256 = "a71fcee2bc7820fc4e0c780bb9c7c6db8364fd2c5bac20867c5c33eed470dc51",
    urls = [
        "https://mirror.bazel.build/http.us.debian.org/debian/pool/main/f/fonts-noto/fonts-noto-hinted_20161116-1_all.deb",
        "http://http.us.debian.org/debian/pool/main/f/fonts-noto/fonts-noto-hinted_20161116-1_all.deb",
    ],
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

#TODO(mollyibot): Enable this after rules_webtesting is registered
#bazel_dep(
#    name = "rules_webtesting",
#    version = "0.4.0",
#    repo_name = "io_bazel_rules_webtesting",
#)
http_archive(
    name = "io_bazel_rules_webtesting",
    sha256 = "bdffc275556538f88e4e06a8d44d3ae2b781ae472795a2976b07194caba417fb",
    strip_prefix = "rules_webtesting-77428ec7e39f26e31b438372ab2bc2f90f42fa5d",
    urls = ["https://github.com/bazelbuild/rules_webtesting/archive/77428ec7e39f26e31b438372ab2bc2f90f42fa5d.tar.gz"],
)

http_archive(
    name = "com_google_protobuf",
    sha256 = "87407cd28e7a9c95d9f61a098a53cf031109d451a7763e7dd1253abf8b4df422",
    strip_prefix = "protobuf-3.19.1",
    urls = [
        "https://github.com/protocolbuffers/protobuf/archive/v3.19.1.tar.gz",
    ],
)

http_archive(
    name = "com_google_protobuf_js",
    build_file = "@io_bazel_rules_closure//closure/protobuf:protobuf_js.BUILD",
    sha256 = "87407cd28e7a9c95d9f61a098a53cf031109d451a7763e7dd1253abf8b4df422",
    strip_prefix = "protobuf-3.19.1/js",
    urls = [
        "https://github.com/protocolbuffers/protobuf/archive/v3.19.1.tar.gz",
    ],
)

http_archive(
    name = "com_google_javascript_closure_library",
    patch_args = ["-p1"],
    sha256 = "64fc4eac972197af13a827a928fff8a2f4711d9a3411147c115a0fc6c1322f70",
    strip_prefix = "closure-library-20230802",
    urls = ["https://github.com/google/closure-library/archive/v20230802.tar.gz"],
)

platform_http_file = use_repo_rule("//closure/private:platform_http_file.bzl", "platform_http_file")

platform_http_file(
    name = "clang",
    amd64_sha256 = "b25f592a0c00686f03e3b7db68ca6dc87418f681f4ead4df4745a01d9be63843",
    amd64_urls = [
        "https://github.com/llvm/llvm-project/releases/download/llvmorg-10.0.0/clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz",
    ],
    macos_sha256 = "633a833396bf2276094c126b072d52b59aca6249e7ce8eae14c728016edb5e61",
    macos_urls = [
        "https://github.com/llvm/llvm-project/releases/download/llvmorg-10.0.0/clang+llvm-10.0.0-x86_64-apple-darwin.tar.xz",
    ],
)

platform_http_file(
    name = "phantomjs",
    amd64_sha256 = "86dd9a4bf4aee45f1a84c9f61cf1947c1d6dce9b9e8d2a907105da7852460d2f",
    amd64_urls = [
        "https://mirror.bazel.build/bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2",
        "https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2",
    ],
    macos_sha256 = "538cf488219ab27e309eafc629e2bcee9976990fe90b1ec334f541779150f8c1",
    macos_urls = [
        "https://mirror.bazel.build/bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-macosx.zip",
        "https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-macosx.zip",
    ],
)
